--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-      <div class="row parallax-5 lazy" id="cta" style="background-image: url(/assets/images/eyegrad.jpeg)" data-original="/assets/images/eyegrad.jpeg">
+      <div class="row parallax-5" id="cta">
         <div class="col-lg-12" id="wrap-main-h1">  
          <div class="row">
            <div class="col-xs- col-sm-2">
