--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -36,9 +36,9 @@
     <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
+    <script src="/js/scripts/d3-gene-visual.js" type="text/javascript"></script>
       
     {{!-- <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script> --}}
-
 
 {{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.12.3.js"></script> --}}
 
