--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>CesarCells</title>
+    <title>CesarCells - Retinal Disease Clinical Trials - Stargardt's disease, Age Related Macular Degeneration, Glaucoma</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="description" content="Retinal Disease Clinical Trials, Stemcell, genetics, drug, cell therapy, SNPs, genotype. Qualify for clinical eye disease trials">
+    <meta name="author" content="Genes, Genetic Analysis, Stargardt's Disease, Age Related Macular Degeneration, Glaucoma">
+    <meta name="google-site-verification" content="tiX5eVg72ed7w7-rgaJAQOpxmU1Z5iZVF6HGsugfVNw" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/67714d146e.js"></script>
