--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");*/
-    background-image: url("/assets/images/eyegrad.jpeg");
+    background-image: url("/assets/images/eyegrad.jpg");
 
     /* Set a specific height */
     height: 100%;
