--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -23,11 +23,19 @@
               <a href="#" id="resources-nav-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources & Support <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/whats-stargardts-disease">What is Stargardts?</a></li>
+                <li role="separator" class="divider"></li>
+
                 <li><a href="/stargardts-clinical-trials">What to expect during a clinical trial?</a></li>
+                <li role="separator" class="divider"></li>
+
                 <li><a href="/stargardts-assistive-technologies">Assistive Technologies</a></li>
+                <li role="separator" class="divider"></li>
+
                 <li><a href="/stargardts-glossary">Glossary</a></li>
                 {{!-- <li role="separator" class="divider"></li>
                 <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li> --}}
+               {{!--  <li role="separator" class="divider"></li>
+                <li><a href="https://www.facebook.com/groups/visionquestadvocacynetwork/" target="_blank">Vision Quest Advocacy Network</a></li> --}}
                 <li role="separator" class="divider"></li>
                 <li><a href="/take-the-betatest-survey" class="links-footer">Beta Test Feedback Form</a></li>
               </ul>
@@ -36,7 +44,9 @@
               <a href="#" id="resources-nav-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/contact_us/contact">Contact</a></li>
-                <li><a href="/about_us/aboutus">Company</a></li>
+                <li role="separator" class="divider"></li>
+
+                <li><a href="/about_us/aboutus">About</a></li>
                 
               </ul>
             </li>
