--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -87,7 +87,7 @@
       <p class="lead" style="line-height: 2.4; font-size: 24px; margin-left: 180px; width: 150">If the total points in the Your Points field, match the total points in the Qualifying Points field, then you've qualified for that trial. It's that simple! </p>
 
       <div class="col-sm-12">
-      <a href="/users/dashboard" type="submit" class="btn btn-primary" id="back-to-dash-btn"> Back To Dashboard</a><br>
+      <a href="/users/dashboard" type="submit" class="btn btn-primary" id="back-to-dash-btn"> <span class="glyphicon glyphicon-dashboard" aria-hidden="true">     </span>     Back To Dashboard</a><br>
 
       </div>
     </div>
