--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -42,9 +42,9 @@
                   <div class="modal-content">
                     <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                    <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
+                    <h4 class="modal-title" id="myModalLabel"></h4>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body about-body">
                         <h2 style="text-align: left">Vincent Porta</h2>
                         <span>Founder and Full Stack Developer</span> <br>
                         <br>
@@ -67,9 +67,9 @@
                   <div class="modal-content">
                     <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                    <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
+                    <h4 class="modal-title" id="myModalLabel"></h4>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body about-body">
                         <h2 style="text-align: left">Pavan Katepalli</h2>
                         <span>Technical and Business Advisor</span> <br>
                         <br>
@@ -92,9 +92,9 @@
                   <div class="modal-content">
                     <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                    <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
+                    <h4 class="modal-title" id="myModalLabel"></h4>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body about-body about-body">
                         <h2 style="text-align: left">Angela Gonzalez</h2>
                         <span>Medical Advisor</span> <br>
                         <br>
