--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -1,77 +1,87 @@
 
-    <div class="row" id="row-top-dash-images">
-        {{#if noTakeAssessment}}
-        <p class="alert alert-danger">{{noTakeAssessment}}</p>
-        {{/if}}
+    <div class="container" style="background-color: whitesmoke; width: 100%; height: 100%; padding: 40px">
+        <div class="row" id="row-top-dash-images">
+          {{#if noTakeAssessment}}
+            <p class="alert alert-danger">{{noTakeAssessment}}</p>
+          {{/if}}
 
-        {{#if successFlash}}
-        <h2 style="font-size: 36px">{{successFlash}}</h2>
-        {{/if}}
+          {{#if successFlash}}
+            <h2 style="font-size: 36px">{{successFlash}}!</h2>
+          {{/if}}
 
-        {{#if taken}}
+          {{#if taken}}
 
-        <p class="alert alert-danger">{{taken}}</p>
-        {{/if}}  
-    </div>
-    <div class="container">
+            <p class="alert alert-danger">{{taken}}</p>
+          {{/if}}  
+        </div>
         
 
         <div class="row">
-          <div class="col-xs-12 col-sm-12">
+          <div class="col-xs-12 col-sm-4 wrap-results">
 
-          {{!-- <p>{{user.profileimage.path}}</p> --}}
               <a href="/users/view-results">
-              {{!-- Testing profile image display below --}}
-              {{!-- <img src="{{user.profileimage.path}}" width="400px" height="400px"/> --}}
-              <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="200px" id="img-dash5"/>
-              <h3 class="dash-h3s"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true">     YOUR RESULTS</span></h3>
+            
+              {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="400px" id="img-dash5"/> --}}
+
+              <h3 class="dash-h3s"><span class="glyphicon glyphicon-th-list" aria-hidden="true">     YOUR RESULTS</span></h3>
               </a>
           </div>
-          <div class="col-xs-6 col-sm-6">
+          <div class="col-xs-12 col-sm-4 wrap-results">
             {{#if user.assessmentTaken}}
 
             <a href="#" class="disabled_a_href">
-            <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/>
+            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
             <h3 class="dash-h3s" id="top-left-h3" style="color: deeppink"><span class="glyphicon glyphicon-ok" aria-hidden="true">     You Took The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{else}}
             <a href="/tools/start-health-assessment">
-            <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/>
-            <h3 class="dash-h3s" id="top-left-h3"><span class="glyphicon glyphicon-unchecked" aria-hidden="true">     Take The Clinical Trial <br>Assessment</span></h3>
+            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
+            <h3 class="dash-h3s" id="top-left-h3"><span class="glyphicon glyphicon-list-alt" aria-hidden="true">     Take The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{/if}}
           </div>
-          <div class="col-xs-6 col-sm-6">
+          <div class="col-xs-12 col-sm-4 wrap-results">
             <a href="/tools/my-genetics">
-            <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206">
+            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"> --}}
             <h3 class="dash-h3s" id="top-right-h3"><spanid="top-right-span" class="glyphicon glyphicon-stats" aria-hidden="true">     My Genetics</span></h3>
             </a>
           </div>
 
           <!-- Add the extra clearfix for only the required viewport -->
-          <div class="clearfix visible-xs-block"></div>
-
-          <div class="col-xs-6 col-sm-6">
-            <a href="/tools/amsler-test">
-
-            <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="206"/>
-            <h3 class="dash-h3s"><span class="glyphicon glyphicon-tasks" aria-hidden="true">     Take the Amsler Test</span></h3>
-            </a>
-
-          </div>
-          <div class="col-xs-6 col-sm-6">
+          <div class="col-xs-12 col-sm-4 wrap-results">
             {{#if user.geneReportPurchase}}
             <a href="/charge" class="disabled_a_href">
-            <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/>
+            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/> --}}
             <h3 class="dash-h3s" id="top-right-h3" style="color: deeppink"><spanid="top-right-span" class="glyphicon glyphicon-ok" aria-hidden="true">     You Purchased a Gene Report</span></h3>
             {{else}}
             <a href="/charge">
-            <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/>
-            <h3 class="dash-h3s" id="top-right-h3"><spanid="top-right-span" class="glyphicon glyphicon-unchecked" aria-hidden="true">     Purchase Gene Report</span></h3>
+            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/> --}}
+            <h3 class="dash-h3s" id="top-right-h3"><spanid="top-right-span" class="glyphicon glyphicon-credit-card" aria-hidden="true">     Purchase Gene Report</span></h3>
             {{/if}}
             </a>
 
           </div>
+          {{!-- <div class="clearfix visible-xs-block"></div> --}}
+
+          <div class="col-xs-12 col-sm-4 wrap-results">
+            <a href="/tools/amsler-test">
+
+            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
+            <h3 class="dash-h3s"><span class="glyphicon glyphicon-tasks" aria-hidden="true">     Take the Amsler Test</span></h3>
+            </a>
+
+          </div>
+          <div class="col-xs-12 col-sm-4 wrap-results">
+       
+          <a href="/users/stargardt-disease-registry" >
+
+          {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
+          <h3 class="dash-h3s"><span class="glyphicon glyphicon-book" aria-hidden="true">     Stargardt's Disease Registry</span></h3>
+          </a>
+         
+
+          </div>
+         
 
         </div>
     </div>
