added slack chatroom

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
              <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More</a>
              <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials.</strong></p>
            
-             <span class="glyphicon glyphicon-star" aria-hidden="true">     Trials are derived from: <img src="/assets/images/clintrial.png" width="50%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 50px;"></span>
+             <span class="glyphicon glyphicon-star" aria-hidden="true">     Trials are derived from: <img src="/assets/images/clintrial.png" width="50%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 50px;" alt="clinical trials"></span>
              
             
              
@@ -89,19 +89,19 @@
                         
                              <div class="col-md-3 wrap-trial-img">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
-                             <img class="clin-trial-img" src="/assets/images/donut2.jpeg">
+                             <img class="clin-trial-img" src="/assets/images/donut2.jpeg" alt="clinical trial">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">DRUG</h2>
-                             <img class="clin-trial-img" src="/assets/images/drugBottle.jpeg">
+                             <img alt="clinical trial" class="clin-trial-img" src="/assets/images/drugBottle.jpeg">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">BIO-TECH</h2>
-                             <img class="clin-trial-img" src="/assets/images/magGlass.jpeg">
+                             <img alt="clinical trial" class="clin-trial-img" src="/assets/images/magGlass.jpeg">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">GENETIC</h2>
-                             <img class="clin-trial-img" src="/assets/images/geneladder.jpeg">
+                             <img alt="clinical trial" class="clin-trial-img" src="/assets/images/geneladder.jpeg">
                              </div>
               </div>
             </div>
@@ -183,7 +183,7 @@
               </ul>
              </div>
              <div class="col-md-5">
-              <img src="/assets/images/23andMe_Box.jpg" id="two3andme-img-index">
+              <img alt="clinical trial" src="/assets/images/23andMe_Box.jpg" id="two3andme-img-index">
 
              </div>                             
         </header>
@@ -237,7 +237,7 @@
          <li>      <strong id="index-title">     AND MORE!</strong></li><br>
         </ul>
         <h2 class="sample-genereport-h2"><strong id="index-title">Gene Report     <br><br></strong><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h2>
-        <img src="/assets/images/samplereport.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded" id="img-genereport">
+        <img alt="clinical trial" src="/assets/images/samplereport.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded" id="img-genereport">
         
 
       </div>
@@ -245,9 +245,9 @@
       <div class="col-lg-6">
         <h2 class="sample-genetable-h2"><strong id="index-title">Gene Table     <br><br></strong><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h2>
 
-        <img src="/assets/images/gene-table.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded">
+        <img alt="clinical trial" src="/assets/images/gene-table.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded">
         <h2 class="sample-genetable-h2"><strong id="index-title">Genetics </strong> Results Page</h2>
-        <img src="/assets/images/mac.jpeg" width="100%" height="100%" style="padding: 30px" class="img-rounded">
+        <img alt="clinical trial" src="/assets/images/mac.jpeg" width="100%" height="100%" style="padding: 30px" class="img-rounded">
 
 
       </div>
