--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>CesarCells - Retinal Disease Clinical Trials - Stargardt's disease, Age Related Macular Degeneration, Glaucoma</title>
+    <title>CesarCells - Retinal Disease Clinical Trials. Age Related Macular Degeneration</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Retinal Disease Clinical Trials, Stemcell, genetics, drug, cell therapy, SNPs, genotype. Qualify for clinical eye disease trials">
     <meta name="author" content="Genes, Genetic Analysis, Stargardt's Disease, Age Related Macular Degeneration, Glaucoma">
     <meta name="google-site-verification" content="tiX5eVg72ed7w7-rgaJAQOpxmU1Z5iZVF6HGsugfVNw" />
