--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,6 +2,7 @@
   <div class="panel-footer"> 
   
     <a href="/take-the-betatest-survey" class="links-footer">Beta Test Feedback Form</a><br>
+    <a href="https://cesarcells.herokuapp.com/" class="links-footer">Join Our Slack Chatroom</a><br>
     <a href="/contact_us/contact" class="links-footer">Contact Us</a><br>
     <a target="_blank" class="links-footer" href="/accounts/privacy-home">Privacy Policy & Terms and Conditions</a> 
   
