--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -37,6 +37,8 @@
                {{!--  <li role="separator" class="divider"></li>
                 <li><a href="https://www.facebook.com/groups/visionquestadvocacynetwork/" target="_blank">Vision Quest Advocacy Network</a></li> --}}
                 <li role="separator" class="divider"></li>
+                <li><a href="https://cesarcells.herokuapp.com/" target="_blank">Join Our Slack Chatroom</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/take-the-betatest-survey" class="links-footer">Beta Test Feedback Form</a></li>
               </ul>
             </li>
