--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -39,7 +39,8 @@ My Tools <span class="caret"></span></a>
                            
                 {{!-- <li><a href="/tools/genetic">Connect With 23AndMe</a></li>
                 <li role="separator" class="divider"></li> --}}
-              
+                <li><a href="https://cesarcells.herokuapp.com/" target="_blank">Join Our Slack Chatroom</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
