--- a/views/charge/charge.handlebars
+++ b/views/charge/charge.handlebars
@@ -6,7 +6,7 @@
 
     <div class="col-sm-12 col-md-7" style="margin-top: 100px; padding: 50px">
     
-    <h1 style="margin-bottom: 50px" id="charge-h1"><strong id="index-title">CESAR</strong>CELLS GENE REPORT | Beta Price: $1.99</h1>
+    <h1 style="margin-bottom: 50px" id="charge-h1"><strong id="index-title">CESAR</strong>CELLS GENE REPORT | Beta Price: FREE</h1>
     
     <table id="cart" class="table table-hover table-condensed" style="margin-top: 40px">
           <thead>
@@ -50,7 +50,7 @@
             <script
               src="https://checkout.stripe.com/checkout.js" class="stripe-button"
               data-key="pk_live_fAyJYhYErHQWeMAGika1cYOZ"
-              data-amount="199"
+              data-amount="0"
               data-name="CESARCELLS"
               data-description="Gene Report"
               data-zip-code="true"
@@ -61,7 +61,7 @@
             </form></td>
 
             <td colspan="2" class="hidden-xs"></td>
-            <td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
+            <td class="hidden-xs text-center"><strong>Total $0</strong></td>
            
           </tr>
         </tfoot>
@@ -130,7 +130,7 @@
               <script
                 src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                 data-key="pk_live_fAyJYhYErHQWeMAGika1cYOZ"
-                data-amount="199"
+                data-amount="0"
                 data-name="CESARCELLS"
                 data-description="Gene Report"
                 data-zip-code="true"
