--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -22,7 +22,7 @@
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-medkit" aria-hidden="true"></i>
         My Health <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="/users/stargardt-disease-registry">Stargardt Disease Registry</a></li>
+                <li><a href="/users/stargardt-disease-registry">Stargardt's Disease Report</a></li>
                 <li role="separator" class="divider"></li>
                 {{!-- <li><a href="/users/my-appointments">Appointments</a></li>
                 <li role="separator" class="divider"></li> --}}
