--- a/views/tools/amsler_test_page.handlebars
+++ b/views/tools/amsler_test_page.handlebars
@@ -76,7 +76,7 @@
                     <tr>
 
                         <th>Date</th>
-                        <th>What You Saw</th>
+                        <th>What did you see?</th>
 
                         <th>Delete</th>
                       
