--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -1,7 +1,7 @@
-  <div class="jumbotron">
+ {{!--  <div class="jumbotron">
      <h1></h1>
-   </div>
-
+   </div> --}}
+{{!-- 
   <div class="row" id="start-panel-head">
     <div class="col-md-6 col-md-offset-3">
 
@@ -12,11 +12,11 @@
     </div>
       <img>
     </div>
-  </div>
+  </div> --}}
 
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
-    <h2>YOU CAN ONLY TAKE THE ASSESSMENT ONCE</h2>
+    <h1>YOU CAN ONLY TAKE THE ASSESSMENT ONCE</h1>
     {{!-- <a href="/indexOne.html">GO</a> --}}
         <div class="form-group">
           <div class="panel panel-default">
@@ -28,6 +28,6 @@
           </div>
         </div>
   
-      <a href="/indexOne.html" id="lets-go" class="btn btn-default">LET'S GO</a>
+      <a href="/indexOne.html" id="lets-go" class="btn btn-default">Begin</a>
   </div>
 </div>
