--- a/views/trials/trial_zero.handlebars
+++ b/views/trials/trial_zero.handlebars
@@ -16,7 +16,7 @@ If you are a parent or guardian looking for study information for children under
         
             <form action="/clinical-trials/contact/zero" method="post" class="form-horizontal trial-contact-forms">
                 {{!-- <h2 class="title-trials"> <br><strong>TRIAL ID: {{data.trials.0.id}}</strong></h2> --}}
-                <h2> <br><strong>Status: {{data.trials.0.status}}</strong></h2>
+                <h2> <br>Status: {{data.trials.0.status}}</h2>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Subject: </label>
