--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -22,12 +22,12 @@
       </div> -->
 
       <div id='emailform' class="form-group">
-        <label for="em">EMAIL </label>
+        <label for="em" class="col-xs-1 control-label">EMAIL </label>
         <input type="email" id="e-mail" name="email" class="form-control" placeholder="Enter Email" required >
       </div>
           
       <div class="form-group">
-        <label for="pass">PASSWORD </label>
+        <label for="pass" class="col-xs-1 control-label">PASSWORD </label>
         <input title="Password must contain at least 6 characters, including UPPER/lowercase and numbers" type="password" id="pass" name="password" class="form-control" placeholder='Enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
       </div>
 
