--- a/views/trials/trial_four.handlebars
+++ b/views/trials/trial_four.handlebars
@@ -14,7 +14,7 @@ If you are a parent or guardian looking for study information for children under
         
             <form action="/clinical-trials/contact/four" method="post" class="form-horizontal trial-contact-forms">
                 {{!-- <h2 class="title-trials"> <br><strong>TRIAL NAME: {{data.trials.4.name}}</strong></h2> --}}
-                <h2> <br><strong>Status: {{data.trials.4.status}}</strong></h2>
+                <h2> <br>Status: {{data.trials.4.status}}</h2>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Subject: </label>
