--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -1,5 +1,5 @@
 
-    <div class="container" style="background-color: whitesmoke; width: 100%; height: 100%; padding: 40px">
+    <div class="container" style="background-color: white; width: 100%; height: 100%; padding: 40px">
         <div class="row" id="row-top-dash-images">
           {{#if noTakeAssessment}}
             <p class="alert alert-danger">{{noTakeAssessment}}</p>
