--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -255,7 +255,7 @@
 
     <div class="row">
       <div class="col-lg-12">
-      <p class="lead" style="text-align: center">Each report is just $25 and comes with a free dietary protocol complete with Lifestyle, Nutrition, and Supplementation Recommendations. *No refunds on virtual products</p>
+      <p class="lead" style="text-align: center">Each report is currently free during our Beta launch, and comes with a free dietary protocol complete with Lifestyle, Nutrition, and Supplementation Recommendations. *No refunds on virtual products</p>
       <a href="/users/sign-in" type="submit" class="btn btn-primary" id="buy-gene-btn-register-now" style="margin-top: 50px" > <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Yes! I want a Gene Report</a><br>
       </div>
       
