fixed update info bug

--- a/views/account/updateinfo.handlebars
+++ b/views/account/updateinfo.handlebars
@@ -1,7 +1,7 @@
 <div class="row"><br>
       <h2 id="header-details-form">UPDATE INFORMATION</h2>
   <div class="col-lg-6" id="wrap-updateinfo">
-      <form class="form-updateinfo" action="/accounts/update-info" method="post" autocomplete="on" enctype="multipart/form-data">
+      <form class="form-updateinfo" action="/accounts/update-info" method="post" autocomplete="on">
       <br>
   
     <div class="form-group">
