--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -7,7 +7,7 @@
       {{#if scores.0.points}}
       <div class="panel panel-default">
       
-        <div class="panel-body"><p class="lead">View your results in the table below. Click on 'Ask About This Trial' only if your points are equal to the qualifying points and you are ready to contact the clinic.</p></div>
+        <div class="panel-body"><p class="lead">View your results in the table below. Click on 'Ask About This Trial' only if your points are equal to, or within 1 point of, the qualifying points; and, you are ready to contact the clinic.</p></div>
       </div>
     </div> 
     <div class="col-md-6" >
