--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -20,30 +20,28 @@
           <div class="col-xs-12 col-sm-4 wrap-results">
 
               <a href="/users/view-results">
-            
-              {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="400px" id="img-dash5"/> --}}
 
-              <h3 class="dash-h3s"><span class="glyphicon glyphicon-th-list" aria-hidden="true">     YOUR RESULTS</span></h3>
+              <p class="dash-h3s"><span class="glyphicon glyphicon-th-list" aria-hidden="true">     </span>               Assessment Results</p>
               </a>
           </div>
           <div class="col-xs-12 col-sm-4 wrap-results">
             {{#if user.assessmentTaken}}
 
             <a href="#" class="disabled_a_href">
-            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
-            <h3 class="dash-h3s" id="top-left-h3" style="color: deeppink"><span class="glyphicon glyphicon-ok" aria-hidden="true">     You Took The Clinical Trial <br>Assessment</span></h3>
+         
+            <p class="dash-h3s"><span class="glyphicon glyphicon-ok" aria-hidden="true"> </span>         You Took The Clinical Trial Assessment</p>
             </a>
             {{else}}
             <a href="/tools/start-health-assessment">
-            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
-            <h3 class="dash-h3s" id="top-left-h3"><span class="glyphicon glyphicon-list-alt" aria-hidden="true">     Take The Clinical Trial <br>Assessment</span></h3>
+           
+            <p class="dash-h3s"><span class="glyphicon glyphicon-list-alt" aria-hidden="true">        </span>         Take The Clinical Trial Assessment</p>
             </a>
             {{/if}}
           </div>
           <div class="col-xs-12 col-sm-4 wrap-results">
             <a href="/tools/my-genetics">
-            {{!-- <img src='/assets/images/justwhite.jpeg' class="img-rounded" alt="Cinque Terre" width="100%" height="206"> --}}
-            <h3 class="dash-h3s" id="top-right-h3"><spanid="top-right-span" class="glyphicon glyphicon-stats" aria-hidden="true">     My Genetics</span></h3>
+           
+            <p class="dash-h3s"><span class="glyphicon glyphicon-stats" aria-hidden="true">     </span>          My Genetics</p>
             </a>
           </div>
 
@@ -51,23 +49,21 @@
           <div class="col-xs-12 col-sm-4 wrap-results">
             {{#if user.geneReportPurchase}}
             <a href="/charge" class="disabled_a_href">
-            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/> --}}
-            <h3 class="dash-h3s" id="top-right-h3" style="color: deeppink"><spanid="top-right-span" class="glyphicon glyphicon-ok" aria-hidden="true">     You Purchased a Gene Report</span></h3>
+           
+            <p class="dash-h3s"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>                  You Purchased a Gene Report</p>
             {{else}}
             <a href="/charge">
-            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="100%" height="206"/> --}}
-            <h3 class="dash-h3s" id="top-right-h3"><spanid="top-right-span" class="glyphicon glyphicon-credit-card" aria-hidden="true">     Purchase Gene Report</span></h3>
+            
+            <p class="dash-h3s"><span class="glyphicon glyphicon-credit-card" aria-hidden="true">        </span>         Purchase Gene Report</p>
             {{/if}}
             </a>
 
           </div>
-          {{!-- <div class="clearfix visible-xs-block"></div> --}}
 
           <div class="col-xs-12 col-sm-4 wrap-results">
             <a href="/tools/amsler-test">
 
-            {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
-            <h3 class="dash-h3s"><span class="glyphicon glyphicon-tasks" aria-hidden="true">     Take the Amsler Test</span></h3>
+            <p class="dash-h3s"><span class="glyphicon glyphicon-tasks" aria-hidden="true">     </span>        Take the Amsler Test</p>
             </a>
 
           </div>
@@ -75,8 +71,7 @@
        
           <a href="/users/stargardt-disease-registry" >
 
-          {{!-- <img src="/assets/images/justwhite.jpeg" class="img-rounded" alt="Cinque Terre" width="100%" height="206"/> --}}
-          <h3 class="dash-h3s"><span class="glyphicon glyphicon-book" aria-hidden="true">     Stargardt's Disease Registry</span></h3>
+          <p class="dash-h3s"><span class="glyphicon glyphicon-book" aria-hidden="true">     </span>         Stargardt's Disease Registry</p>
           </a>
          
 
@@ -86,10 +81,6 @@
         </div>
     </div>
     
-
- 
-           {{!-- <canvas width="1600px" height="1000"></canvas> --}}
-
 
    
     
