--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,14 @@
 body {
-    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Lato,sans-serif;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
-    /*line-height: 26.4px;*/
     color: black; 
-;
     background-color: transparent;
-    /*padding: 5px;*/
     font-size: 23px;
-    /*line-height: .6;*/
 }
 h1 {
-    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Lato,sans-serif;
     font-size: 24px;
     font-style: normal;
     font-variant: normal;
@@ -20,12 +16,15 @@ h1 {
     line-height: 26.4px;
 }
 h3 {
-    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Lato,sans-serif;
     font-size: 25px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
     line-height: 15.4px;
+}
+a {
+    font-family: Lato,sans-serif;
 }
 #bs-example-navbar-collapse-1 {
     margin-left: 25%;
@@ -1832,6 +1831,15 @@ text-align: center;
   animation-iteration-count: 1;
 }
 
+.label-text {
+    font-family: Lato,sans-serif;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 200;
+    color: black; 
+    background-color: transparent;
+    font-size: 23px;
+}
 
 #img-dash {
     margin-left: 10px;
@@ -1863,29 +1871,27 @@ text-align: center;
 
 }
 .wrap-results {
-    /*background-color: white; */
     height: 140px;
-    border-width: 2px;
-    border-style: solid;
     margin-bottom: 30px;
-    border-color: whitesmoke;
+    border: solid 1px #ccc;
 }
 
 
 .dash-h3s {
-    color: black;
+    color: darkslategrey;
     font-size: 28px;
-    font-weight: 600;
+    font-weight: 200;
     vertical-align: middle;
     margin: 0;
     padding: 0;
-    
-
+    font-family: Lato,sans-serif;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
-.dash-h3s:hover {
-    color: black;
-    cursor: pointer
 
+.dash-h3s:hover {
+    /*color: black;*/
+    cursor: pointer
 }
 .img-rounded {
     padding: 10px;
@@ -1912,32 +1918,11 @@ text-align: center;
 
 }
 
-h3 {
-    position: absolute;
-    /*left: 0;*/
-    top: 100px;
-    width: 100%;
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-
-}
- /*h3 span {
-    color: white; 
-    font: bold 24px/45px Helvetica, Sans-Serif; 
-    letter-spacing: -1px;  
-    background: rgb(0, 0, 0);  fallback color 
-    background: rgba(0, 0, 0, 0.7);
-    padding: 10px;
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-
- }*/
-
-
 #top-left-h3 {
     width: 100%;
 }
 
- #top-right-span {
- }
+
 
 #col-two-dash-images {
     background-color: whitesmoke;
@@ -3050,141 +3035,7 @@ header {
     /*top: 50%;*/
     min-height: 100%;
 }
-/*@media only screen and (max-device-width: 767px) {
-    .login-logo img {
-        margin: 0 auto;
-    }
-    .login-details .nav-tabs > li {
-        text-align: center;
-        width: 50%;
-    }
-    .login-signup .login-inner h1 {
-        font-size: 26px;
-        margin-bottom: 0;
-        margin-top: 10px;
-    }
-    .login-inner .login-form input {
-        font-size: 15px;
-        max-width: 100%;
-        padding: 15px 45px;
-    }
-    .login-inner .form-details {
-        padding: 25px;
-    }
-    .login-inner .login-form label {
-        margin-bottom: 20px;
-        width: 100%;
-    }
-    .login-inner .form-btn {
-        margin: 0;
-        max-width: 180px;
-    }
-    .tab-content .tab-pane {
-        padding: 20px 0;
-    }
-    #navigation .navi a {
-        font-size: 14px;
-        padding: 20px;
-        text-align: center;
-    }
-    #navigation .navi i {
-        margin-right: 0px;
-    }
-    #navigation .navi a:hover,
-    #navigation .navi .active a {
-        background: #122143 none repeat scroll 0 0;
-        border-left: none;
-        display: block;
-        padding-left: 20px;
-    }
-    header .header-top img {
-        max-width: 38px !important;
-    }
-    .v-align header {
-        padding: 12px 15px;
-    }
-    header .header-top li {
-        padding-left: 13px;
-        padding-right: 6px;
-    }
-    .navbar-default .navbar-toggle {
-        border-color: rgba(0, 0, 0, 0);
-    }
-    .navbar-header .navbar-toggle {
-        float: left;
-        margin: 0;
-        padding: 0;
-        top: 12px;
-    }
-    button,
-        html [type="button"],
-        [type="reset"],
-        [type="submit"] {
-            outline: medium none;
-    }
-    .user-dashboard .sales h2 {
-        color: #8492af;
-        float: left;
-        font-size: 14px;
-        font-weight: 600;
-        margin: 0;
-        padding: 13px 0 0;
-}
-    .user-dashboard .btn.btn-secondary.btn-lg.dropdown-toggle > span {
-        font-size: 11px;
-}
-    .user-dashboard .sales button {
-        font-size: 11px;
-        padding-right: 23px;
-}  
-    .user-dashboard .sales h2 {
-    font-size: 12px;
-}
-.gutter{
-    padding: 0;
-}
-}
 
-@media only screen and (max-device-width: 992px) {
-    header .header-top li {
-        padding-left: 20px !important;
-        padding-right: 0;
-}
-    header .logo img {
-        max-width: 125px !important;
-}
-
-}
-
-@media only screen and (min-device-width: 767px) and (max-device-width: 998px){
-    .user-dashboard .header-top {
-        padding-top: 5px;
-}
-    .user-dashboard .header-rightside {
-        display: inline-block;
-        float: left;
-        width: 100%;
-}
-    .user-dashboard .header-rightside .header-top img {
-        max-width: 41px !important;
-} 
-    .user-dashboard .sales button {
-    font-size: 10px;
-}
-    .user-dashboard .btn.btn-secondary.btn-lg.dropdown-toggle > span {
-    font-size: 12px;
-}
-    .user-dashboard .sales h2 {
-    font-size: 15px;
-}
-}
-@media only screen and (min-device-width:998px) and (max-device-width: 1350px){
-    #navigation .logo img {
-        max-width: 130px;
-        padding: 16px 0 17px;
-        width: 100%;
-    }
-}*/
 
 #cesarcells-consent-language {
     margin-top: 140px; 
@@ -3405,14 +3256,7 @@ header {
         height: 250px;
         padding: 30px;
     }
-    #top-right-h3 {
-        /*width: 150px;*/
-        /*left: 270px;*/
-    }
-    #top-left-h3 {
-        /*width: 150px;*/
-        /*left: 70px;*/
-    }
+   
     /****USER/DASHBOARD ENDS****/
     /****AMSLER PAGE BEGINS****/
     #amsler-grid-h1 {
