--- a/views/account/updateinfo.handlebars
+++ b/views/account/updateinfo.handlebars
@@ -5,12 +5,12 @@
       <br>
   
     <div class="form-group">
-      <label class="required" for="FirstName">First Name</label>
+      <label class="required label-text" for="FirstName">First Name</label>
       <input type="text" name="fname" placeholder="First name" class="form-control" autofocus required="true"> 
     </div>
 
     <div class="form-group">
-      <label class="required" for="StreetAddy">Last Name</label>
+      <label class="required label-text" for="StreetAddy">Last Name</label>
       <input type="text" name="lname" placeholder="Last name" class="form-control" required="true">
     </div>
     {{!-- <div class="form-group">
@@ -19,27 +19,27 @@
     </div> --}}
     
     <div class="form-group">
-      <label for="u-age">Age: </label>
+      <label for="u-age" class="required label-text">Age: </label>
       <input type="number" id="u-age" name="userage" class="form-control" placeholder="Enter Age">
     </div>
-    <label class="required" for="sexDetails">Sex</label>
+    <label class="required label-text" for="sexDetails">Sex</label>
     <select class="form-control" name="sexselectpicker" required="true">
       <option value="male" name="male">Male</option>
       <option value="female" name="female">Female</option>
     </select>
 
     <div class="form-group">
-      <label for="StreetAddy">Street Address</label>
+      <label for="StreetAddy" class="required label-text">Street Address</label>
       <input type="text" name="streetaddy" placeholder="Street Address" class="form-control">
     </div>
 
     <div class="form-group">
-      <label for="city">City</label>
+      <label for="city" class="required label-text">City</label>
       <input type="text" name="city" placeholder="city" class="form-control">
     </div>
 
     <div class="form-group">
-      <label class="required" for="WhoIsItFor">Who is this profile for?</label>
+      <label class="required label-text" for="WhoIsItFor">Who is this profile for?</label>
       <select name="userType" required="true">
           <option value="myself">Myself</option>
           <option value="familyMember">A Family Member</option>
@@ -48,7 +48,7 @@
       </select>
     </div>
 
-    <label for="statedetails">State</label><br>
+    <label for="statedetails" class="required label-text">State</label><br>
     <select class="form-control" name="stateselectpicker">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
@@ -104,21 +104,21 @@
     </select> <br>
     
     <div class="form-group">
-      <label class="required" for="zip">Zip: </label>
+      <label class="required label-text" for="zip">Zip: </label>
       <input type="number" id="zip" name="zipcode" class="form-control" placeholder="Enter Zipcode" required="true">
     </div>      
 
     <div class="form-group">
-      <label class="required" for="Birthday">Enter your Birthday</label>
+      <label class="required label-text" for="Birthday">Enter your Birthday</label>
       <input type="date" name="bday" id="inputBirthday" class="form-control" required="true">
     </div>
 
     <div class="form-group">
-      <label for="phone">Phone Number</label>
+      <label for="phone" class="required label-text">Phone Number</label>
       <input type="number" name="phone" placeholder="2011234567" class="form-control">
     </div>
 
-    <label class="required" for="RetinalDiagnosis">Have you been CLINICALLY diagnosed with a retinal disease?</label>
+    <label class="required label-text" for="RetinalDiagnosis">Have you been CLINICALLY diagnosed with a retinal disease?</label>
     <select name="diagnosedSelect" required="true">
         <option value=""></option>
         <option value="true">Yes</option>
@@ -126,7 +126,7 @@
       </select>
       <br><br>
 
-    <label class="required" for="WhichDisease">If you answered yes to the previous question, which retinal disease have you been diagnosed with?(Select "none" if you answered no)</label>
+    <label class="required label-text" for="WhichDisease">If you answered yes to the previous question, which retinal disease have you been diagnosed with?(Select "none" if you answered no)</label>
     <select name="retinalDisease" required="true">
         <option value="none">None</option>
         <option value="stargardts">Stargardt's Disease</option>
