--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -6,55 +6,55 @@
 <div class="alert alert-info">{{info}}</div>
 {{/if}}
 <div class="col-lg-8" id="wrap-starg-form">
-<h2><strong id="index-title">STARGARDT'S DISEASE</strong> REPORT</h2>
+{{!-- <h2><strong id="index-title">STARGARDT'S DISEASE</strong> REPORT</h2> --}}
 
-<h2 style="margin-top: 50px">Fill out the form below if you'd like us to share your information with the world's most cutting edge companies developing <strong id="index-title">stem cell, drug, bio-tech, and gene therapy retinal disease treatments.</strong> </h2>
+<h1 style="margin-top: 50px">Fill out the form below if you'd like us to share your information with the world's most cutting edge companies developing <strong id="index-title">stem cell, drug, bio-tech, and gene therapy retinal disease treatments.</strong> </h1>
 
 <form class="details-new-form" action="/users/submit-stargardt-disease-registry
 " method="post" autocomplete="on">
   <br>
   
   <div class="form-group">
-    <label for="visual trouble age">At what age did you start having <strong id="index-title">visual trouble</strong>?
+    <label class="required label-text" for="visual trouble age">At what age did you start having <strong id="index-title">visual trouble</strong>?
 </label>
     <input type="number" name="visualtrouble" placeholder="" class="form-control" required="true"> 
   </div>
 
   <div class="form-group">
-    <label for="besteyevision">Back then, what was the <strong id="index-title">vision</strong> of your best seeing eye (20/xxx)?</label>
+    <label class="required label-text" for="besteyevision">Back then, what was the <strong id="index-title">vision</strong> of your best seeing eye (20/xxx)?</label>
     <input required="true" type="text" name="besteyevision" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
-    <label for="Vision Today">What is your vision today (best seeing eye, 20/xxx)? </label>
+    <label class="required label-text" for="Vision Today">What is your vision today (best seeing eye, 20/xxx)? </label>
     <input required="true" type="number" id="visiontoday" name="visiontoday" class="form-control" placeholder="">
   </div> 
 
   <div class="form-group">
-    <label for="Genetically confirmed">Have you been genetically confirmed for <strong id="index-title">Stargardt's Disease</strong> (Yes/No)?</label>
+    <label class="required label-text" for="Genetically confirmed">Have you been genetically confirmed for <strong id="index-title">Stargardt's Disease</strong> (Yes/No)?</label>
     <input required="true" type="text" name="stargeneticallyconfirm" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
-    <label for="mutation">If yes, please provide the detected <strong id="index-title">ABCA4 genetic mutation(s)</strong></label>
+    <label class="required label-text" for="mutation">If yes, please provide the detected <strong id="index-title">ABCA4 genetic mutation(s)</strong></label>
     <input required="true" type="text" name="genemutation" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
-    <label for="opto name">Name of your <strong id="index-title">ophthalmologist</strong>
+    <label class="required label-text" for="opto name">Name of your <strong id="index-title">ophthalmologist</strong>
 </label>
     <input required="true" type="text" name="opthaname" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
-    <label for="opto phone and email">Contact information of your <strong id="index-title">ophthalmologist</strong> (phone, email or both)</label>
+    <label class="required label-text" for="opto phone and email">Contact information of your <strong id="index-title">ophthalmologist</strong> (phone, email or both)</label>
     <input required="true" type="text" name="opthaemail" placeholder="info@gmail.com 212-111-1111" class="form-control" >
   </div>
   <div class="form-group">
-    <label for="Under 18 legal guardian">If you are under 18 years old, please enter the name of a parent or legal representative:</label>
+    <label class="required label-text" for="Under 18 legal guardian">If you are under 18 years old, please enter the name of a parent or legal representative:</label>
     <input required="true" type="text" name="underlegalguardian" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
-    <label for="Form filled out for someone else">If you filled out this form for someone else, please enter your name here
+    <label class="required label-text" for="Form filled out for someone else">If you filled out this form for someone else, please enter your name here: (else type: 'n/a')
 </label>
     <input required="true" type="text" name="filledoutform" placeholder="" class="form-control" >
   </div>
